<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginVertical="10dp"
    android:layout_marginStart="10dp"
    app:cardCornerRadius="30dp"
    app:cardElevation="0dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="24dp"
        android:background="@color/green_a300">

        <ImageView
            android:id="@+id/icon_city"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_snowy_rainy"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/name_weather"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/cloudy"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/time_weather"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/sunrise_time_example"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/temperature_weather"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/tem_example"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>